feat: safe to evict property
