# job-scheduler/models/common/job_component_description.go
@@ -23,6 +23,12 @@ type RadixJobComponentConfig struct {
 	// required: false
 	BackoffLimit *int32 `json:"backoffLimit,omitempty"`
 
+	// SafeToEvict defines whether the job can be safely evicted by the cluster autoscaler during node scale-down.
+	// If not set, the value is determined by timeLimitSeconds. Read documentation for details.
+	//
+	// required: false
+	SafeToEvict *bool `json:"safeToEvict,omitempty"`
+
 	// FailurePolicy defines how failed job replicas influence the backoffLimit.
 	//
 	// required: false
